RESOLVED FIXED240763
Invisible border should not trigger Repaint diff when currentColor changes
https://bugs.webkit.org/show_bug.cgi?id=240763
Summary Invisible border should not trigger Repaint diff when currentColor changes
alan
Reported 2022-05-21 13:12:16 PDT
ssia
Attachments
Patch (3.63 KB, patch)
2022-05-21 13:18 PDT, alan
no flags
Patch (3.59 KB, patch)
2022-05-21 13:36 PDT, alan
no flags
[fast-cq]Patch (3.59 KB, patch)
2022-05-21 15:23 PDT, alan
no flags
alan
Comment 1 2022-05-21 13:18:16 PDT
alan
Comment 2 2022-05-21 13:36:00 PDT
alan
Comment 3 2022-05-21 15:23:46 PDT
Created attachment 459642 [details] [fast-cq]Patch
EWS
Comment 4 2022-05-21 19:34:42 PDT
Committed r294618 (250844@main): <https://commits.webkit.org/250844@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459642 [details].
Radar WebKit Bug Importer
Comment 5 2022-05-21 19:35:13 PDT
Note You need to log in before you can comment on or make changes to this bug.