Invisible border should not trigger Repaint diff when currentColor changes https://bugs.webkit.org/show_bug.cgi?id=240763

Reviewed by Simon Fraser.

Let's check if the border is visible to decide if the currentColor should trigger Repaint diff.

Test: fast/repaint/currentColorChange-with-non-visible-border.html
* Source/WebCore/rendering/style/BorderData.cpp:
(WebCore::BorderData::isEquivalentForPainting const):
* LayoutTests/fast/repaint/currentColorChange-with-non-visible-border-expected.txt: Added.
* LayoutTests/fast/repaint/currentColorChange-with-non-visible-border.html: Added.

Canonical link: https://commits.webkit.org/250844@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@294618 268f45cc-cd09-0410-ab3c-d52691b4dbfc